application startup created and default coffees saved.

--- a/simple-coffee-order/src/main/resources/application-local.yml
+++ b/simple-coffee-order/src/main/resources/application-local.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/simple-coffee-order?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/simple-coffee-order?serverTimezone=UTC
     username: root
     password: root
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: false
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
