--- a/simple-coffee-order/src/main/resources/application-local.yml
+++ b/simple-coffee-order/src/main/resources/application-local.yml
@@ -4,6 +4,6 @@ spring:
     username: root
     password: root
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
