--- a/simple-coffee-order/src/main/resources/application-local.yml
+++ b/simple-coffee-order/src/main/resources/application-local.yml
@@ -7,3 +7,6 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: create
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
